# Insurance-Client-Manager

./: .coverage  .env  .gitignore  README.md  config.py  main.py  main_scheduler.py  pyproject.toml
docs/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_2d10b41d7a07db3a___init___py.html  z_2d10b41d7a07db3a_client_py.html  z_2d10b41d7a07db3a_invoice_py.html  z_2d10b41d7a07db3a_report_py.html  z_4555edab72402d85___init___py.html  z_4555edab72402d85_base_manager_py.html  z_4555edab72402d85_client_manager_py.html  z_7b16e41632184ac6___init___py.html  z_7b16e41632184ac6_style_type_py.html  z_99eb5e1157c7e19c___init___py.html  z_99eb5e1157c7e19c_clients_scheduler_py.html  z_9cb21a49ba70bd71___init___py.html  z_c0152e0f41c29602___init___py.html  z_c0152e0f41c29602_client_service_py.html  z_c0152e0f41c29602_email_service_py.html  z_c0152e0f41c29602_invoice_service_py.html
htmlcov/: index.html  z_2d10b41d7a07db3a___init___py.html  z_4555edab72402d85_client_manager_py.html  z_7b16e41632184ac6___init___py.html  z_7b16e41632184ac6_style_type_py.html  z_9cb21a49ba70bd71___init___py.html
src/excel/manager/: base_manager.py  (+1 more)
src/model/: client.py  invoice.py  report.py
src/scheduler/: clients_scheduler.py
src/service/: client_service.py  email_service.py  invoice_service.py
tests/: conftest.py  test_model.py  test_scheduler.py
tests/test_excel/: conftest.py  test_base_manager_and_style.py  test_client_manager.py
tests/test_service/: test_client_service.py  test_email_service.py  test_invoice_service.py
(+1 files in other folders)
